gradient issue on small screens

--- a/style.css
+++ b/style.css
@@ -72,6 +72,5 @@ a:active {
     .container {
         margin-top: 0;
         grid-column: 1 / -1;
-        height: 100vh; /* so that the gradient will will be fully visible */
     }
 }
